--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <section class="introduction">
@@ -38,14 +39,20 @@
       </nav>
       <h2 class="title">Based on blockchain Ethereum</h1>
       <h1 class="title">A JUSTICE SYSTEM</h1>
-      <h1 class="subtitle">FOR THE INTERNET</h1>
+      <h1 class="subtitle">FOR THE INTERNET AGE</h1>
 
-      <button type="button" class="btn btn-danger">How it works</button>
+      <p>
+        A decentralized autonomous organization that delivers
+        <br />
+        fast, affordable amd transparent justice for all.
+      </p>
+
+      <button type="button" class="btn btn-warning">How it works?</button>
       <button type="button" class="btn btn-default">Download the white paper</button>
     </section>
 
-    <section class="justice-system">
-      <h2>JUSTICE SYSTEM</h2>
+    <section class="the-justice-protocol">
+      <h2>THE JUSTICE PROTOCOLE</h2>
     </section>
 
     <section class="how-it-works">
