change color of the navbar

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">System</a></li>
-              <li><a href="#">How it works</a></li>
-              <li><a href="#">App</a></li>
-              <li><a href="#">Crowdfunding</a></li>
-              <li><a href="#">Team</a></li>
-              <li><a href="#">Advisor</a></li>
-              <li><a href="#">Faq</a></li>
-              <li><a href="#">Contact</a></li>
+              <li class="activeLink"><a href="#">System</a></li>
+              <li><a href="#" class="navbar-link">How it works</a></li>
+              <li><a href="#" class="navbar-link">App</a></li>
+              <li><a href="#" class="navbar-link">Crowdfunding</a></li>
+              <li><a href="#" class="navbar-link">Team</a></li>
+              <li><a href="#" class="navbar-link">Advisor</a></li>
+              <li><a href="#" class="navbar-link">Faq</a></li>
+              <li><a href="#" class="navbar-link">Contact</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
