--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
               <li class="activeLink"><a href="#">System</a></li>
               <li><a href="#" class="navbar-link">How it works</a></li>
               <li><a href="#" class="navbar-link">App</a></li>
