add text introduction

--- a/index.html
+++ b/index.html
@@ -37,18 +37,26 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-      <h2 class="title">Based on blockchain Ethereum</h1>
-      <h1 class="title">A JUSTICE SYSTEM</h1>
-      <h1 class="subtitle">FOR THE INTERNET AGE</h1>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/phone.png" class="phone" />
+          <img src="img/pinakion.png" class="pinakion" />
+        </div>
+        <div class="col-md-6 introduction-text bottom-align-text">
+          <h2 class="title">Based on blockchain Ethereum</h1>
+          <h1 class="title">A JUSTICE SYSTEM</h1>
+          <h1 class="subtitle">FOR THE INTERNET AGE</h1>
 
-      <p>
-        A decentralized autonomous organization that delivers
-        <br />
-        fast, affordable amd transparent justice for all.
-      </p>
+          <p>
+            A decentralized autonomous organization that delivers
+            <br />
+            fast, affordable amd transparent justice for all.
+          </p>
 
-      <button type="button" class="btn btn-warning">How it works?</button>
-      <button type="button" class="btn btn-default">Download the white paper</button>
+          <button type="button" class="btn btn-warning">How it works?</button>
+          <button type="button" class="btn btn-default">Download the white paper</button>
+        </div>
+      </div>
     </section>
 
     <section class="the-justice-protocol">
