design top text

--- a/index.html
+++ b/index.html
@@ -43,18 +43,20 @@
           <img src="img/pinakion.png" class="pinakion" />
         </div>
         <div class="col-md-6 introduction-text bottom-align-text">
-          <h2 class="title">Based on blockchain Ethereum</h1>
-          <h1 class="title">A JUSTICE SYSTEM</h1>
-          <h1 class="subtitle">FOR THE INTERNET AGE</h1>
+          <h2 class="title-protocol">Based on Ethereum <img class="logo-ethereum" src="img/ethereum_logo.png" /> Blockchain</h1>
+          <h1 class="title">A JUSTICE SYSTEM<br />FOR THE INTERNET AGE</h1>
 
-          <p>
+          <p class="top-description">
             A decentralized autonomous organization that delivers
             <br />
             fast, affordable amd transparent justice for all.
           </p>
 
-          <button type="button" class="btn btn-warning">How it works?</button>
-          <button type="button" class="btn btn-default">Download the white paper</button>
+          <div class="top-call-to-action">
+            <button type="button" class="btn btn-default btn-how-it-works">How it works?</button>
+            <button type="button" class="btn btn-default btn-how-it-wp">Download the white paper</button>
+          </div>
+
         </div>
       </div>
     </section>
