add second section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div><!-- /.container-fluid -->
       </nav>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-5 col-md-offset-1">
           <img src="img/phone.png" class="phone" />
           <img src="img/pinakion.png" class="pinakion" />
         </div>
@@ -62,7 +62,44 @@
     </section>
 
     <section class="the-justice-protocol">
-      <h2>THE JUSTICE PROTOCOLE</h2>
+      <div class="row">
+        <div class="col-md-5 col-md-offset-1">
+          <h2 class="title-section">THE JUSTICE<br /><span class="the-justice-protocol-subtitle">PROTOCOLE</span></h2>
+          <div class="row">
+            <div class="col-md-6">
+              <p>The blockchain ushers a world of contracts enforced by code.</p>
+              <p>
+                Smart contracts are smart enough to self-execute as programmed,
+                but not to evaluate complex information or to render subjective
+                judgments.
+              </p>
+              <p>
+                Human involvement is necessary when a dispute arises, when circumstances have drastically changed since the moment the contract was signed and when a high stakes decision must be made.
+              </p>
+              <p>
+                Kleroterion is a decision making protocol which uses the blockchain, crowdsourcing and game theory to settle disputes and to modify or revoke smart contracts in a fast, transparent and inexpensive way.
+              </p>
+            </div>
+            <div class="col-md-6">
+              <p>
+                An entrepreneur hires a freelancer for a software development gig. A dispute arises about the scope of the contract.
+              </p>
+              <p>
+                Should the freelancer give the money back to his client?
+              </p>
+              <p>
+                A startup raises money with a crowdfunding campaign. Funds will be released after certain milestones are reached. Should the next payment be made?
+              </p>
+              <p>
+                A band uploads a song on a music platform. The song is flagged for plagiarism. Should the song be deleted?
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img class="iMac" src="img/iMac.png" />
+        </div>
+      </div>
     </section>
 
     <section class="how-it-works">
