--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <p class="top-description">
             A decentralized autonomous organization that delivers
             <br />
-            fast, affordable amd transparent justice for all.
+            fast, affordable and transparent justice for all.
           </p>
 
           <div class="top-call-to-action">
