--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section class="the-justice-protocol">
       <div class="row">
         <div class="col-md-5 col-md-offset-1">
-          <h2 class="title-section">THE JUSTICE<br /><span class="the-justice-protocol-subtitle">PROTOCOLE</span></h2>
+          <h2 class="the-justice-protocol-title-section">THE JUSTICE<br /><span class="the-justice-protocol-subtitle">PROTOCOLE</span></h2>
           <div class="row">
             <div class="col-md-6">
               <p>The blockchain ushers a world of contracts enforced by code.</p>
@@ -103,7 +103,46 @@
     </section>
 
     <section class="how-it-works">
-      <h2>HOW IT WORKS?</h2>
+      <h2 class="how-it-works-title-section text-center title-how-it-works">HOW IT WORKS?</h2>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-2 text-center">
+          <img src="img/contract.png" />
+          <h3>Contract</h3>
+          <p>
+            Users create
+            a smart contract and select Kleroterion
+            as arbitration protocol
+          </p>
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="img/dispute.png" />
+          <h3>Dispute</h3>
+          <p>
+            A dispute arises,
+            and the relevant
+            information is sent
+            to Kleroterion
+          </p>
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="img/jury.png" />
+          <h3>Jury</h3>
+          <p>
+            A jury is drawn
+            from the crowd. Jurors evaluate evidence and vote a decision.
+          </p>
+        </div>
+        <div class="col-md-2 text-center">
+          <img src="img/decision.png" />
+          <h3>Decision</h3>
+          <p>
+            The decision
+            is enforced
+            by the smart
+            contract.
+          </p>
+        </div>
+      </div>
     </section>
 
     <section class="applications">
