add section how works

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
               <p>
                 Kleroterion is a decision making protocol which uses the blockchain, crowdsourcing and game theory to settle disputes and to modify or revoke smart contracts in a fast, transparent and inexpensive way.
               </p>
+              <button type="button" class="btn btn-default">How it works?</button>
             </div>
             <div class="col-md-6">
               <p>
@@ -93,6 +94,7 @@
               <p>
                 A band uploads a song on a music platform. The song is flagged for plagiarism. Should the song be deleted?
               </p>
+              <button type="button" class="btn btn-default">Download the white paper</button>
             </div>
           </div>
         </div>
