--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body data-spy="scroll" data-target=".navbar-fixed-top">
+  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <section class="introduction">
       <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container-fluid">
@@ -26,7 +26,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#page-top"><img src="img/logo_kleroterion.png" class="navbar-logo" />Kleroterion<sup class="introduction-sup">Alpha</sup></a>
+            <a class="navbar-brand page-scroll" href="#page-top"><img src="img/logo_kleroterion.png" class="navbar-logo" />Kleroterion<sup class="introduction-sup">Alpha</sup></a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
