--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
       </div>
     </section>
 
-    <section class="applications">
+    <section class="applications" id="applications">
 
-      <div class="row" id="applications">
+      <div class="row" >
         <div class="col-md-5 col-md-offset-1">
                 <h2 class="applications-title-section">APPLICATIONS</h2>
           <p class="applications-introduction-text">
@@ -163,8 +163,26 @@ justice.
             A jury of software experts analyze the evidence and votes a verdict.<br />
             A smart contract transfers the money to the winning party.
           </p>
+        </div>
       </div>
+      <div class="row" >
+        <div class="col-md-2 col-md-offset-1">
+          <img src="img/kleroterion.png" />
+      </div>
+      <div class="col-md-2">
+        <p>
+          The kleroterion was
+          a randomization device
+          used by the Athenian polis
+          to select citizens to court juries.
+
+          As stated in the smart contract, all revenue from the song is redirected to the original creator.
+
+          https://ru.wikipedia.org/wiki
+        </p>
+    </div>
     </section>
+
 
     <section class="features" id="features">
       <h2>FEATURES</h2>
