add section features

--- a/index.html
+++ b/index.html
@@ -185,11 +185,124 @@ justice.
 
 
     <section class="features" id="features">
-      <h2>FEATURES</h2>
+      <div class="row" >
+        <div class="col-md-11 col-md-offset-1 app-border">
+          <h2 class="app-title-section">APP FEATURES</h2>
+        </div>
+      </div>
+
+      <div class="row" >
+        <div class="col-md-4 col-md-offset-1 rect">
+        </div>
+        <div class="col-md-4 col-md-offset-1 rect">
+        </div>
+      </div>
+
+      <div class="row" >
+        <div class="col-md-3 col-md-offset-1">
+          <h3>Crowdfunding</h3>
+          <p>
+            Crowdfunding
+
+            A startup raises money with a crowdfunding campaign. Funds will be released after the company presents a working prototype.
+
+            The company presents a prototype and claims the payment. Kleroterion group of jurors vote that the prototype is not good enough.
+
+            The payment is withheld.
+          </p>
+        </div>
+        <div class="col-md-2">
+          <img class="app-icon" src="img/crowdfunding.png" />
+        </div>
+
+        <div class="col-md-3">
+          <h3>Copyright</h3>
+          <p>
+            A band uploads a song on a decentralized music platform. A user flags the song for plagiarism. Kleroterion jury determines that the song was indeed plagiarized.
+
+            As stated in the smart contract, all revenue from the song is redirected to the original creator.
+          </p>
+        </div>
+        <div class="col-md-2">
+          <img src="img/copyright.png" class="app-icon" />
+        </div>
+      </div>
+      <div class="row" >
+        <div class="col-md-4 col-md-offset-1 rect">
+        </div>
+        <div class="col-md-4 col-md-offset-1 rect">
+        </div>
+      </div>
+      <div class="row" >
+        <div class="col-md-3 col-md-offset-1">
+          <h3>Arbitration</h3>
+          <p>
+            A paperwork mistake causes a convoy of a freight cargo to be stuck at a port for 3 days, at a cost of several thousand dollars.
+
+            The jury determines that the mistake was made by the shipping company, which has to compensate the client.
+          </p>
+        </div>
+        <div class="col-md-2">
+          <img src="img/arbitration.png" class="app-icon" />
+        </div>
+        <div class="col-md-3">
+          <h3>Social media</h3>
+          <p>
+            A user is flagged for an inappropriate comment in a decentralized social media platform. Kleroterion jury decides that the comment has violated terms and conditions.
+
+            A smart contract takes reputation
+            away from the user.
+          </p>
+        </div>
+        <div class="col-md-2">
+          <img src="img/social_media.png" class="app-icon" />
+        </div>
+      </div>
+      <div class="row" >
+        <div class="col-md-4 col-md-offset-1 rect">
+        </div>
+        <div class="col-md-4 col-md-offset-1 rect">
+        </div>
+      </div>
     </section>
 
     <section class="team" id="team">
-      <h2>TEAM</h2>
+      <div class="row" >
+        <div class="col-md-7 col-md-offset-1">
+          <h2>TEAM</h2>
+        </div>
+        <div class="col-md-2">
+          <h3>JOIN OUR TEAM</h2>
+        </div>
+      </div>
+
+      <div class="row" >
+        <div class="col-md-2 col-md-offset-1">
+          <h3>Frederico</h3>
+        </div>
+        <div class="col-md-2">
+          <h3>Clément Lesaege</h3>
+        </div>
+        <div class="col-md-2">
+          <h3>Wagner Nicolas</h3>
+        </div>
+      </div>
+      <div class="row" >
+        <div class="col-md-11 col-md-offset-1">
+          <h2>ADVISORS</h2>
+        </div>
+      </div>
+      <div class="row" >
+        <div class="col-md-2 col-md-offset-1">
+          <h3>Ryan Zurrer</h3>
+        </div>
+        <div class="col-md-2 col-md-offset-1">
+          <h3>Frederico Ast</h3>
+        </div>
+        <div class="col-md-2 col-md-offset-1">
+          <h3>Frederico Ast</h3>
+        </div>
+      </div>
     </section>
 
     <section class="faq" id="faq">
