--- a/index.html
+++ b/index.html
@@ -269,27 +269,34 @@ justice.
     <section class="team" id="team">
       <div class="row" >
         <div class="col-md-7 col-md-offset-1">
-          <h2>TEAM</h2>
+          <h2 class="team-title-section">TEAM</h2>
         </div>
         <div class="col-md-2">
-          <h3>JOIN OUR TEAM</h2>
+          <h3 class="join-team-title-section">JOIN OUR TEAM</h2>
         </div>
       </div>
 
       <div class="row" >
         <div class="col-md-2 col-md-offset-1">
-          <h3>Frederico</h3>
+          <img src="img/federico_ast.png" />
+          <h3>Frederico Ast</h3>
         </div>
         <div class="col-md-2">
+          <img src="img/lesaege.png" />
           <h3>Clément Lesaege</h3>
         </div>
         <div class="col-md-2">
-          <h3>Wagner Nicolas</h3>
+          <img src="img/anonymous.png" />
+          <h3>Nicolas Wagner</h3>
+        </div>
+        <div class="col-md-2 col-md-offset-1">
+          <img src="img/anonymous.png" />
+          <h3>You</h3>
         </div>
       </div>
       <div class="row" >
         <div class="col-md-11 col-md-offset-1">
-          <h2>ADVISORS</h2>
+          <h2 class="advisors-title-section">ADVISORS</h2>
         </div>
       </div>
       <div class="row" >
