--- a/index.html
+++ b/index.html
@@ -280,14 +280,23 @@ justice.
         <div class="col-md-2 col-md-offset-1">
           <img src="img/federico_ast.png" />
           <h3>Frederico Ast</h3>
+          <p>
+            CEO
+          </p>
         </div>
         <div class="col-md-2">
           <img src="img/lesaege.png" />
           <h3>Clément Lesaege</h3>
+          <p>
+            CTO
+          </p>
         </div>
         <div class="col-md-2">
-          <img src="img/anonymous.png" />
+          <img src="img/anonymous.png" style="clip: rect(0px,0px,200px,0px);"/>
           <h3>Nicolas Wagner</h3>
+          <p>
+            WEB3 DEVELOPER
+          </p>
         </div>
         <div class="col-md-2 col-md-offset-1">
           <img src="img/anonymous.png" />
@@ -301,12 +310,15 @@ justice.
       </div>
       <div class="row" >
         <div class="col-md-2 col-md-offset-1">
+          <img src="img/anonymous.png" />
           <h3>Ryan Zurrer</h3>
         </div>
         <div class="col-md-2 col-md-offset-1">
+          <img src="img/anonymous.png" />
           <h3>Frederico Ast</h3>
         </div>
         <div class="col-md-2 col-md-offset-1">
+          <img src="img/anonymous.png" />
           <h3>Frederico Ast</h3>
         </div>
       </div>
