add section faq

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ justice.
         </div>
         <div class="col-md-2 col-md-offset-1">
           <img src="img/anonymous.png" />
-          <h3>You</h3>
+          <h3>Contact us</h3>
         </div>
       </div>
       <div class="row" >
@@ -325,10 +325,148 @@ justice.
     </section>
 
     <section class="faq" id="faq">
-      <h2>FRENQUENTLY ASKED QUESTION</h2>
+      <div class="row" >
+        <div class="col-md-10 col-md-offset-1">
+          <h2 class="faq-title-section">FRENQUENTLY ASKED QUESTION</h2>
+          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingOne">
+                <h4 class="">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Why is the protocol called Kleroterion?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                  Ancient Athenians developed an elaborate methodology for selecting representatives for public office and jurors for trials. Selection was made randomly with an allotment machine called Kleroterion. In Greek, Kleros means “chance”. An approximate translation is “the chance machine”. Expert selection in the Kleroterion protocol is loosely inspired in Greek courts. The Kleroterion protocol attributes decision rights to jurors having the right skillset and the right incentives to produce a correct decision at the lowest cost and the shortest amount of time.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingTwo">
+                <h4 class="">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    What are the key applications of Kleroterion?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                  The Kleroterion protocol is especially suited for decisions that require a high level of transparency. An important use case involves arbitration. In this case, jurors have to analyze evidence and produce a verdict about which party is right in a dispute. Kleroterion is 100% voluntary and all parties have to opt-in (but they can do so before a dispute arises).
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingThree">
+                <h4 class="">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    How are jurors selected and how do you make sure they do honest work?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+                <div class="panel-body">
+                  Kleroterion uses advanced concepts from game theory, collective intelligence, cryptography and blockchain to make sure that jurors have an incentive to make honest decisions without having to reveal their true identity. The incentive structure is based on a reputation token called pinakion that represents the right of users to be drawn as jurors. Users doing high quality work will earn money over time. Users doing poor quality work or trying to abuse the system will lose money. To learn more about how incentives work, read our white paper.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingFor">
+                <h4 class="">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFor" aria-expanded="false" aria-controls="collapseFor">
+                    How does Kleroterion decide the number of jurors that will make a decision in a given case?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseFor" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFor">
+                <div class="panel-body">
+                  The number of jurors is decided by the parties when the contract is signed. If, after the decision, a party is not satisfied (maybe, because it thinks that jurors did not vote honestly), it can appeal and pay to have the decision made again. In the next round, a new decision will be made with double the amount of decision makers.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingFive">
+                <h4 class="">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    Can I make money by being a decision-maker in Kleroterion?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+                <div class="panel-body">
+                  Kleroterion needs skilled people to serve as jurors. Jurors earn arbitration fees for their work. The more cases you solve and the best the quality of your work, the more money you can make.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingSix">
+                <h4 class="">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                    I’m organization with disputes to solve. Can I use Kleroterion?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+                <div class="panel-body">
+                  Absolutely. Please contact us to run a pilot.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingSeven">
+                <h4 class="">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                  I am a researcher and want to study Kleroterion. Can I do it?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
+                <div class="panel-body">
+                  Kleroterion is a new research field in game theory, blockchain, collective intelligence and business. If you’re an academic wishing to study Kleroterion, please contact us.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingHeight">
+                <h4 class="">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseHeight" aria-expanded="false" aria-controls="collapseHeight">
+                    Can I build on Kleroterion?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseHeight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingHeight">
+                <div class="panel-body">
+                  Kleroterion is an open source multipurpose decision-making protocol that can be used for making different kinds of decisions. If you’re a developer wanting to build on Kleroterion technology, please contact us.
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="" role="tab" id="headingNine">
+                <h4 class="">
+                  <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                    Who owns Kleroterion?
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
+                <div class="panel-body">
+                  Kleroterion is an open source project that works as a decentralized autonomous organization on Ethereum. The community is the owner of Kleroterion and decide the evolution of the protocol with a liquid democracy mechanism.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
+
+
     <section class="contact" id="contact"></section>
+
+    <footer class="pull-right">
+      Kleroterion © 2017  info@wkleroterion.io
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
