--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           </p>
 
           <div class="top-call-to-action">
-            <button type="button" class="btn btn-default btn-how-it-works">How it works?</button>
-            <button type="button" class="btn btn-default btn-how-it-wp">Download the white paper</button>
+            <a type="button" class="btn btn-default btn-how-it-works page-scroll" href='#how-it-works'>How it works?</a>
+            <a type="button" class="btn btn-default btn-how-it-wp" href='https://docs.google.com/document/d/1dpsSo833CpFfpnu_P9xsVJXi6b2DWHIKbNjCG63Zpg4/edit?usp=sharing'>Download the white paper</a>
           </div>
 
         </div>
@@ -89,7 +89,7 @@
               <p>
                 Kleroterion is a decision making protocol which uses the blockchain, crowdsourcing and game theory to settle disputes and to modify or revoke smart contracts in a fast, transparent and inexpensive way.
               </p>
-              <button type="button" class="btn btn-default">How it works?</button>
+              <a type="button" class="btn btn-default page-scroll" href="#how-it-works">How it works?</a>
             </div>
           </div>
         </div>
